Fix EZP-22124: inline image alignment is not respected (cherry picked from commit 6cc7a683f8ef62aabf54efe8021d08a2f31bc6d2)

--- a/packages/ezdemo_extension/ezextension/ezdemo/design/ezdemo/stylesheets/bootstrap.css
+++ b/packages/ezdemo_extension/ezextension/ezdemo/design/ezdemo/stylesheets/bootstrap.css
@@ -4510,6 +4510,12 @@ a.thumbnail:hover {
   margin-right: auto;
   text-align: center;
 }
+.embed-inline-left {
+  float: left;
+}
+.embed-inline-right {
+  float: right;
+}
 .block .left {
   width: 48%;
   float: left;
